# httpie-rs

./: Cargo.toml  README.md
src/: main.rs
