[package]
edition = "2018"
name = "httpie-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta.4"
colored = "2.0.0"
jsonxf = "1.1.1"
mime = "0.3.16"
reqwest = {version = "0.11.4", features = ["json"]}
syntect = "4.6.0"
tokio = {version = "1.10.0", features = ["full"]}
